# ledger-app-nervos

./: .clang-format  .gitignore  .mocharc.js  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ChangeLog.md  Experimental-ckb-cli.md  LICENSE  Makefile  README.md  account_import.bats  account_import_apdu_prompts_0.txt  basic-tests.js  basic_apdus.bats  blockchain.c  check-installed-version.sh  dao-deposit-prompts.txt  dao-prepare-prompts.txt  dao-withdraw-prompts.txt  dao.bats  debug.md  default.nix  devnet.md  extensions.c  generative-protocol-tests.js  generative-sign-hash-tests.js  git_apdu_stdout.txt  hooks.js  install.sh  lib.sh  mainnet-provide-pubkey-prompts.txt  multi-output-signing.bats  package.json  prompts.md  provide_ext_public_key_apdu_0_0.txt  provide_ext_public_key_prompts.txt  provide_public_key_apdu.bats  provide_public_key_apdu_0_0.txt  provide_public_key_apdu_1_1.txt  (+15 more)
.github/workflows/: continuous-integration-workflow.yml
doc/: annotated.mol  blockchain.mol
fuzzing/: .gitignore  CMakeLists.txt  build.sh  fuzz_message.c  mocks.c  run.sh  ui_fuzzer.c
hw-app-avalanche/: github.json
nix/: app-installer-impl.sh  env.sh  install.sh  ledgerblue.nix  release.sh  setup-vscode.sh  usbtool.nix  watch.sh
nix/dep/: b2sum.nix  usbtool.nix
nix/dep/alamgu/: github.json
nix/dep/ckb/: github.json
nix/dep/ckb-cli/: default.nix  github.json
nix/dep/ckb-cli/ckb-cli-src/: github.json
nix/dep/ckb-plugin-ledger/: github.json
nix/dep/ledger-nanox-sdk/: git.json
nix/dep/ledger-platform/: github.json
nix/dep/nanos-secure-sdk/: github.json
nix/dep/nix-thunk/: github.json
nix/dep/nixpkgs/: github.json
nix/dep/speculos/: github.json
nix/dep/v-usb/: github.json
rust/: Cargo.toml
rust-sdk-bindings/: wrapper.h
rust/src/: apdu.rs  io.rs  lib.rs  ui.rs
src/: annotated.h  apdu.c  apdu.h  apdu_account.c  apdu_account.h  apdu_pubkey.c  apdu_pubkey.h  apdu_sign.c  apdu_sign.h  base_32.c  bech32encode.c  bech32encode.h  blockchain.h  boot.c  exception.h  globals.c  globals.h  glyphs.c  glyphs.h  key_macros.h  keys.c  keys.h  main.c  memory.h  molecule_reader.h  molecule_reader_streaming.h  protocol.h  segwit_addr.c  segwit_addr.h  to_string.c  to_string.h  types.h  ui.c  ui.h  ui_common.c  ui_nano_s.c  ui_nano_x.c  version.h
testnet/: README.md  accounts.lua  get_balances.sh  testnet.lua
tests/: .mocharc.js  account_import.bats  account_import_apdu_0.txt  account_import_apdu_prompts_0.txt  account_imports.js  basic-tests.js  basic_apdus.bats  dao-deposit-prompts.txt  dao-prepare-prompts.txt  dao-withdraw-prompts.txt  dao.bats  dao.js  default.nix  generative-protocol-tests.js  git_apdu_stdout.txt  hooks.js  lib.sh  mainnet-provide-pubkey-prompts.txt  multi-input.bats  multi-input.js  multi-output-signing-five-outputs.txt  multi-output-signing-rollup-outputs.txt  multi-output-signing-two-outputs.txt  multi-output-signing.bats  multi-output.js  package.json  provide_ext_public_key_apdu_0_0.txt  provide_ext_public_key_prompts.txt  provide_public_key_apdu.bats  provide_public_key_apdu.js  provide_public_key_apdu_0_0.txt  provide_public_key_apdu_1_1.txt  provide_public_key_apdu_root.txt  public_key_0_0_0.der  public_key_0_0_0.pem  public_key_der_prefix.der  sign-self-transfer.txt  sign-unsafe-prompts.txt  sign-valid-multi-input-tx-1-prompts.txt  sign-valid-multi-input-tx-2-prompts.txt  (+16 more)
tests/hw-app-avalanche/: github.json
tests/hw-app-ckb/: github.json
