[package]
name = "nervos-app-rs"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
byteorder = "1.3.2"
cty = "0.2.0"

[dependencies.bech32]
version = "0.7.2"
default-features = false

[patch.crates-io]
bech32 = { git = 'https://github.com/obsidiansystems/rust-bech32', branch = 'std-feature' }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 'z' 
lto = true
